fixed dropdown position of header buildlist on small screens

--- a/assets/thinx/css/custom.css
+++ b/assets/thinx/css/custom.css
@@ -693,3 +693,13 @@
   /*opacity: .4;*/
   /*font-size: initial;*/
 }
+
+/* deny dropdown offset on small screens */
+@media (max-width: 767px) {
+  .page-header.navbar .top-menu .navbar-nav>li.dropdown-notification .dropdown-menu {
+      margin-right: initial;
+  }
+  .page-header.navbar .top-menu .navbar-nav>li.dropdown-notification .dropdown-menu:after, .page-header.navbar .top-menu .navbar-nav>li.dropdown-notification .dropdown-menu:before {
+      margin-right: initial;
+  }
+}
